--- a/.github/workflows/lockdown_release.yml
+++ b/.github/workflows/lockdown_release.yml
@@ -184,9 +184,9 @@ jobs:
           sed -i 's/"prebuildChecksum": ""/"prebuildChecksum": "${{ steps.checksum.outputs.sha256 }}"/' package.json
         working-directory: src/node
 
-      # Install and build
+      # Install and build (skip install scripts - we already have the prebuilt binaries)
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --ignore-scripts
         working-directory: src/node
 
       - name: Build TypeScript
